frontend/test/should_fail/uniqueNodeBy.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	n:Node;
	if { nodeByUnique(42) == n; }
	
	modify {
	}
}
